--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -4,13 +4,31 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+    <ImageView
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:id="@+id/imageViewProductImage"
+        android:contentDescription="@string/image_view_description" />
+
     <TextView
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="#000000"
         android:id="@+id/tvProducto"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_toRightOf="@id/imageViewProductImage"
+        android:layout_toEndOf="@id/imageViewProductImage"
+        android:layout_marginStart="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="#000000"
         android:id="@+id/tvPrecio"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="wrap_content"
