--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -10,8 +10,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:id="@+id/imageViewProductImage"
-        android:contentDescription="@string/image_view_description" />
+        android:id="@+id/imageViewProductImage" />
 
     <TextView
         android:layout_marginTop="8dp"
