--- a/app/src/main/res/menu/menu_menu_dia.xml
+++ b/app/src/main/res/menu/menu_menu_dia.xml
@@ -9,4 +9,11 @@
         app:showAsAction="always|withText"
         android:icon="@drawable/icon_reset" />
 
+    <item
+        android:id="@+id/menu_horario_comedor"
+        android:title="Horario Comedor"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:icon="@android:drawable/ic_menu_info_details" />
+
 </menu>
