--- a/app/src/main/res/layout/horario_comedor.xml
+++ b/app/src/main/res/layout/horario_comedor.xml
@@ -7,11 +7,12 @@
 
     <ImageView
         android:id="@+id/about_logo"
-        android:layout_width="100dip"
-        android:layout_height="100dip"
-        android:layout_margin="30dip"
+        android:layout_width="200dip"
+        android:layout_height="200dip"
+        android:layout_margin="15dip"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/horario_comedor" />
+        android:src="@drawable/time"
+        android:contentDescription="@string/horario_comedor"/>
 
 </RelativeLayout>
