--- a/app/src/main/res/menu/menu_menu_dia.xml
+++ b/app/src/main/res/menu/menu_menu_dia.xml
@@ -4,14 +4,14 @@
 
     <item
         android:id="@+id/menu_reset"
-        android:title="Reset"
+        android:title="@string/reset"
         android:orderInCategory="100"
-        app:showAsAction="always|withText"
-        android:icon="@drawable/icon_reset" />
+        app:showAsAction="ifRoom|withText"
+        android:icon="@drawable/ic_refresh_black" />
 
     <item
         android:id="@+id/menu_horario_comedor"
-        android:title="Horario Comedor"
+        android:title="@string/horario_comedor"
         android:orderInCategory="100"
         app:showAsAction="never"
         android:icon="@android:drawable/ic_menu_info_details" />
